--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@ html, body, .container{
   background-color: #cccccc;
 }
 
+.title{
+  padding:50px;
+  font-size: 25px;
+  font-weight: bold;
+  justify-self: center;
+}
+
 ::backdrop {
     background-image: linear-gradient(
       45deg,
@@ -22,7 +29,7 @@ html, body, .container{
 
 .content{
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 15px;
 }
@@ -39,9 +46,42 @@ html, body, .container{
 
   border-radius: 15px;
   margin: 15px;
+
+  box-shadow: transparent 0 0 0 3px,rgba(0, 0, 0, 0.4) 0 6px 20px;
 }
 
 button{
-  width: 125px;
-  padding: 5px;
+
+  align-items: center;
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: transparent 0 0 0 3px,rgba(18, 18, 18, .1) 0 6px 20px;
+  box-sizing: border-box;
+  color: #121212;
+  cursor: pointer;
+  justify-content: center;
+  line-height: 1;
+  margin: 0;
+  outline: none;
+  padding: 0.7rem 1rem;
+  text-align: center;
+  text-decoration: none;
+  transition: box-shadow .2s,-webkit-box-shadow .2s;
+  white-space: nowrap;
+  border: 0;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  margin: 20px;
+}
+
+button:hover {
+  box-shadow: #121212 0 0 0 3px, transparent 0 0 0 0;
+}
+
+#addBookBtn{
+  justify-self: center;
+  margin-bottom: 50px;
+  width: 150px;
+  height: 50px;
 }
